--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootpag": "^1.0.7",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
@@ -17,6 +18,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.1.4",
     "mongoose-findorcreate": "^3.0.0",
+    "mongoose-paginate": "^5.0.3",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^6.1.0"
