--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.17.2",
+    "https": "^1.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.4",
     "mongoose-findorcreate": "^3.0.0",
